--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -211,7 +211,26 @@
                 </div>
             </div>
         {% endif %}
-    </div>
+
+        <div class="row sub-filter">
+                <div class="col-lg-12 subtitle">
+                    VALIDATION STATUS <i
+                        class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
+                        class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+                </div>
+            </div>
+            <div class="row" style="display: none">
+                <div class="col-lg-12 filter-content">
+                    <div><input id="filter-validation-validated" name="filter-validation" type="checkbox" value="true" checked> VALIDATED</div>
+                    <div><input name="filter-validation" type="checkbox" value="false"> NONVALIDATED</div>
+                </div>
+
+                <div class="button-filter-wrapper">
+                    <button class="apply-filter">Apply Filter</button>
+                    <button class="clear-filter">Clear Filter</button>
+                </div>
+            </div>
+        </div>
 </script>
 
 
