add error to choose at least one filter validation

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2403,3 +2403,8 @@ div:hover::-webkit-scrollbar {
     color: white;
 }
 
+#filter-validation-error {
+    font-size: 9pt;
+    color: red;
+    display: none;
+}
