--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -223,6 +223,7 @@
                 <div class="col-lg-12 filter-content">
                     <div><input id="filter-validation-validated" name="filter-validation" type="checkbox" value="true" checked> VALIDATED</div>
                     <div><input name="filter-validation" type="checkbox" value="false"> NONVALIDATED</div>
+                    <div id="filter-validation-error">Please tick at least one filter.</div>
                 </div>
 
                 <div class="button-filter-wrapper">
