add validation filter (#973)
* add validation filter

* add error to choose at least one filter validation

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2405,3 +2405,9 @@ div:hover::-webkit-scrollbar {
     width: 100%;
     color: white;
 }
+
+#filter-validation-error {
+    font-size: 9pt;
+    color: red;
+    display: none;
+}
