--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -1,83 +1,206 @@
 <script type="text/html" id="taxon-detail-dashboard-template">
-    <div class="loading-dashboard">
-        <img src="/static/img/small-loading.svg" width="250"
-             alt="Loading view">
-        <div class="loading-dashboard-subtitle">
-            Loading...
-        </div>
-    </div>
-    <div class="detailed-dashboard-title">&nbsp;</div>
-    <button class="btn btn-primary btn-dashboard close-dashboard"
-            style="float: right"><i class="fa fa-times pull-right"></i>
-    </button>
-    <div class="container dashboard-wrapper">
-        <div>
-            <div class="col-lg-4 col-4">
-                <h5 class="dd-title" style="float: left">Distribution</h5>
-                <button id="export-taxasite-map" style="float: right"
-                        class="btn btn-default btn-element-download"><i
-                        class="fa fa-download"></i></button>
-                <div id="taxasite-map" class="map"
-                     style="height: 300px; width: 100%; border: 1px solid black"></div>
-                <h5 class="dd-title" style="margin-top: 15px">Overview</h5>
-                <div class="overview-taxa-table dashboard-table"
-                     style="margin-top: 10px; margin-bottom: 10px"></div>
-                <h5 class="dd-title">Names & Taxonomy</h5>
-                <div class="overview-name-taxonomy-table dashboard-table"
-                     style="margin-top: 10px; margin-bottom: 10px"></div>
-            </div>
-            <div class="col-lg-8 col-8 dashboard-graph-wrapper">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h5 class="dd-title">Records per area</h5>
-                        <div class="dashboard-table records-area-table"></div>
-                    </div>
-                </div>
-                <div class="row"
-                     style="margin: 0 !important; margin-top: 15px !important;">
-                    <div id="taxa-record-timeline-wrapper"
-                         class="chart-wrapper"
-                         style="border: 1px solid black; width: 95%; height: 200px">
-                        <canvas id="taxa-records-timeline-graph" width="150px"
-                                height="150px"></canvas>
-                    </div>
-                    <div style="width: 5%; ">
-                        <button class="btn btn-default btn-element-download pull-right download-taxa-records-timeline"
-                                style="float: left">
-                            <i class="fa fa-download"></i>
-                        </button>
-                    </div>
-                </div>
-                <div class="row dd-sub-title">CONSERVATION STATUS</div>
-                <div class="row dd-status-list conservation-status-list">
-                    <span class="dd-status-item"
-                          data-value="EX">Extinct (EX)</span>
-                    <span class="dd-status-item" data-value="EW">Extinct in the wild (EW)</span>
-                    <span class="dd-status-item" data-value="CR">Critically endangered (CR)</span>
-                    <span class="dd-status-item" data-value="EN">Endangered (EN)</span>
-                    <span class="dd-status-item" data-value="VU">Vulnerable (VU)</span>
-                    <span class="dd-status-item" data-value="NT">Near threatened (NT)</span>
-                    <span class="dd-status-item" data-value="LC">Least concern (LC)</span>
-                    <span class="dd-status-item" data-value="DD">Data deficient (DD)</span>
-                    <span class="dd-status-item" data-value="NE">Not evaluated (NE)</span>
-                </div>
-                <div class="row dd-sub-title">ORIGIN</div>
-                <div class="row dd-status-list origin-info-list">
-                    <span class="dd-status-item"
-                          data-value="indigenous">Native</span>
-                    <span class="dd-status-item"
-                          data-value="alien">Non-native</span>
-                    <span class="dd-status-item" data-value="translocated">Translocated</span>
-                </div>
-                <div class="row dd-sub-title">ENDEMISM</div>
-                <div class="row dd-status-list endemic-info-list">
-                    <span class="dd-status-item" data-value="widespread">Widespread</span>
-                    <span class="dd-status-item" data-value="regional endemic">Regional endemic</span>
-                    <span class="dd-status-item" data-value="micro-endemic">Micro-endemic</span>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div id="detailed-site-dashboard-wrapper" style="padding: 1rem;">
+		<div class="loading-dashboard">
+			<img src="/static/img/small-loading.svg" width="250"
+				 alt="Loading view">
+			<div class="loading-dashboard-subtitle">
+				Loading...
+			</div>
+		</div>
+		<div class="detailed-dashboard-title">&nbsp;</div>
+		<button class="btn btn-primary btn-dashboard close-dashboard"
+				style="float: right"><i class="fa fa-times pull-right"></i>
+		</button>
+		<div class="container dashboard-wrapper">
+			<div class="row">
+				<div class="col-lg-4">
+					{# Distribution #}
+					<div class="row">
+						<div class="col-lg-12" id="fsdd-distribution">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Distribution
+									</div>
+									<button id="export-locationsite-map"
+											class="btn btn-default pull-right">
+										<i
+												class="fa fa-download"></i>
+									</button>
+								</div>
+
+								<div class="card-body locationsite-map-wrapper">
+									<div id="taxasite-map"
+										 class="map"
+										 style="height: 300px; width: 100%;">
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+					{# Overview #}
+					<div class="row">
+						<div class="col-lg-12" id="fsdd-overview">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Overview
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="overview-taxa-table dashboard-table">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					{# Names and Taxonomy #}
+					<div class="row">
+						<div class="col-lg-12" id="fsdd-names-and-taxonomy">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Names and Taxonomy
+									</div>
+								</div>
+								<div class="card-body">
+									<div id="overview-name-taxonomy-table" class="overview-name-taxonomy-table dashboard-table"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-8 dashboard-graph-wrapper">
+					<div class="row">
+						{# Records Per Area #}
+						<div class="col-lg-12" id="fsdd-records-per-area">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Occurrence Records
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="records-per-area-taxonomy-table dashboard-table"
+										 style="margin-top: 10px; margin-bottom: 10px"></div>
+									<div class="dashboard-table records-area-table"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						{# Records-per-area chart #}
+						<div class="col-lg-12" id="fsdd-records-per-area-chart">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Occurrences
+									</div>
+								</div>
+								<div class="card-body">
+									<canvas id="taxa-records-timeline-graph"></canvas>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						{# orgin #}
+						<div class="col-lg-12" id="fsdd-orgin">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Origin
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="row dd-status-list origin-info-list">
+                    				<span class="dd-status-item"
+										  data-value="indigenous">Native</span>
+										<span class="dd-status-item"
+											  data-value="alien">Non-native</span>
+										<span class="dd-status-item"
+											  data-value="translocated">Translocated</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						{# endemism #}
+						<div class="col-lg-12" id="fsdd-endemism">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Endemism
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="row dd-status-list endemic-info-list">
+									<span class="dd-status-item"
+										  data-value="widespread">Widespread</span>
+										<span class="dd-status-item"
+											  data-value="regional endemic">Regional endemic</span>
+										<span class="dd-status-item"
+											  data-value="micro-endemic">Micro-endemic</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						{# conservation-status #}
+						<div class="col-lg-12" id="fsdd-conservation-status">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Conservation Status
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="row dd-status-list conservation-status-list">
+								<span class="dd-status-item"
+									  data-value="EX">Extinct (EX)</span>
+										<span class="dd-status-item"
+											  data-value="EW">Extinct in the wild (EW)</span>
+										<span class="dd-status-item"
+											  data-value="CR">Critically endangered (CR)</span>
+										<span class="dd-status-item"
+											  data-value="EN">Endangered (EN)</span>
+										<span class="dd-status-item"
+											  data-value="VU">Vulnerable (VU)</span>
+										<span class="dd-status-item"
+											  data-value="NT">Near threatened (NT)</span>
+										<span class="dd-status-item"
+											  data-value="LC">Least concern (LC)</span>
+										<span class="dd-status-item"
+											  data-value="DD">Data deficient (DD)</span>
+										<span class="dd-status-item"
+											  data-value="NE">Not evaluated (NE)</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						{# Images #}
+						<div class="col-lg-12" id="fsdd-images">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Images
+									</div>
+								</div>
+								<div class="card-body" id="fsdd-images-card-body">
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </script>
 
 <script type="text/template" id="taxon-overview-table">
