Added download button for all but the map

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2504,3 +2504,6 @@ div:hover::-webkit-scrollbar {
     font-size: 12px;
 }
 
+.html2canvas-container {
+    width: 3000px !important; height: 3000px !important;
+}
