Updated layout and styling to new designs (#967)

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -82,8 +82,7 @@
 									</div>
 								</div>
 								<div class="card-body">
-									<div class="records-per-area-taxonomy-table dashboard-table"
-										 style="margin-top: 10px; margin-bottom: 10px"></div>
+									<div class="records-per-area-taxonomy-table dashboard-table"></div>
 									<div class="dashboard-table records-area-table"></div>
 								</div>
 							</div>
