--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -73,7 +73,7 @@
 				</div>
 				<div class="col-lg-8 dashboard-graph-wrapper">
 					<div class="row">
-						{# Records Per Area#}
+						{# Records Per Area #}
 						<div class="col-lg-12" id="fsdd-records-per-area">
 							<div class="card">
 								<div class="card-header">
@@ -82,7 +82,8 @@
 									</div>
 								</div>
 								<div class="card-body">
-									<div class="records-per-area-taxonomy-table dashboard-table"></div>
+									<div class="records-per-area-taxonomy-table dashboard-table"
+										 style="margin-top: 10px; margin-bottom: 10px"></div>
 									<div class="dashboard-table records-area-table"></div>
 								</div>
 							</div>
@@ -90,7 +91,7 @@
 					</div>
 					<div class="row">
 						{# Records-per-area chart #}
-						<div class="col-lg-12" id="fsdd-conservation-status">
+						<div class="col-lg-12" id="fsdd-records-per-area-chart">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-header-title pull-left d-inline">
