FSDD Origin List (#971)
* Added innitial template and data

* Passed origin choices to backend

* Final updates to layout and styling

* Replaced the origin title from choices function with new script

--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -244,6 +244,16 @@
     margin-top: 0.5rem;
 }
 
+.dashboard-wrapper .card .card-header   {
+    padding: 0.25rem;
+    padding-left: 1rem;
+    line-height: 1.25rem;
+}
+
+.dashboard-wrapper .card .card-header-title {
+    height: auto;
+}
+
 .dashboard-wrapper .card {
     margin-top: 0.5rem;
 }
@@ -271,8 +281,4 @@
     border: 1px solid #d3d4d1;
     padding-left: 0.5rem;
     font-size: 12px;
-}
-
-.dashboard-wrapper .card {
-    margin-top: 0.5rem;
 }
