--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -144,6 +144,21 @@
 							</div>
 						</div>
 					</div>
+					<div class="row">
+						{# Images #}
+						<div class="col-lg-12" id="fsdd-images">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Images
+									</div>
+								</div>
+								<div class="card-body" id="fsdd-images-card-body">
+
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
