--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -186,7 +186,7 @@
 
 #fish-ssdd-occurrence-data .title-column {
      font-weight: 700;
-
+    overflow-x: hidden;
 }
 
 #fish-ssdd-occurrence-data .col-4 {
@@ -203,6 +203,7 @@
     padding-left: 0.5rem;
     font-size: 12px;
     color: #4a4a4a;
+    overflow-x: hidden;
 }
 
 .center-self {
