fix multisite dashboard

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -266,7 +266,7 @@
 					</div>
 				</div>
 				{# Overview #}
-				<div class="row" id="#fish-ssdd-site-details">
+				<div class="row" id="fish-ssdd-site-details">
 					<div class="col-lg-12" id="fish-ssdd-overview">
 						<div class="card">
 							<div class="card-header">
