--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -239,6 +239,22 @@
 	<div class="container dashboard-wrapper">
 		<div class=" row">
 			<div class="col-lg-4">
+                {# Filter History #}
+                <div class="row">
+					<div class="col-lg-12" id="filter-history-wrapper">
+						<div class="card">
+							<div class="card-header">
+								<div class="card-header-title pull-left d-inline" style="height: 35px !important;">
+									Filter History
+								</div>
+							</div>
+							<div class="card-body">
+								<table id="filter-history-table"></table>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				{# Distribution #}
 				<div class="row">
 					<div class="col-lg-12" id="fish-ssdd-distribution">
