--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -133,25 +133,25 @@
                     Dashboards
                 </div>
                 <div class="col-3">
-                    <div class="fbis-button-small"><span>FISH</span></div>
+                    <div class="fbis-button-small open-detailed-site-button"><span>FISH</span></div>
                 </div>
                 <div class="col-3">
                     <div class="row">
                         <div class="col-12">
-                            <div class="fbis-button-small" style="font-size: 80%"><span>SASS</span></div>
+                            <div class="fbis-button-small" style="font-size: 80%" id="rp-view-sass"><span>SASS</span></div>
                         </div>
 
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <div class="fbis-button-small" style="font-size: 80%">
+                            <div class="fbis-button-small fbis-button-disabled" style="font-size: 80%">
                                 <span>INVERTEBRATES</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="fbis-button-small">
+                    <div class="fbis-button-small fbis-button-disabled">
                         <span>ALGAE</span>
                     </div>
                 </div>
@@ -161,14 +161,14 @@
                     Forms
                 </div>
                 <div class="col-3">
-                    <div class="fbis-button-small fbis-red">
+                    <div class="fbis-button-small fbis-red" id="rp-view-fish-form">
                         <span>ADD FISH</span>
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="row">
                         <div class="col-12">
-                            <div class="fbis-button-small fbis-red" style="font-size: 80%">
+                            <div class="fbis-button-small fbis-red" style="font-size: 80%" id="rp-add-sass">
                                 <span>ADD SASS</span>
                             </div>
                         </div>
@@ -176,14 +176,14 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <div class="fbis-button-small fbis-red" style="font-size: 80%">
+                            <div class="fbis-button-small fbis-red fbis-button-disabled" style="font-size: 80%">
                                 <span>ADD INVERTEBRATES</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="fbis-button-small fbis-red">
+                    <div class="fbis-button-small fbis-red fbis-button-disabled">
                         <span>ADD ALGAE</span>
                     </div>
                 </div>
