Added iucn link to fsdd

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -115,6 +115,7 @@
 								</div>
 								<div id="origin-block-data">
 								</div>
+
 							</div>
 						</div>
 						{# endemism #}
@@ -141,6 +142,12 @@
 								</div>
 								<div id="fsdd-conservation-status-card">
 								</div>
+								<a id="fsdd-iucn-link"
+								   target="_blank">
+									<div class="iucn-species-page-link">
+										IUCN species page
+									</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -377,7 +384,7 @@
 						<div class="card">
 							<div class="card-header">
 								<div class="card-header-title pull-left d-inline">
-									Occurence Data
+									Occurrence Data
 								</div>
 								<button class="ssdd-export btn btn-default pull-right"
 							        data-datac="occurrence-data">
@@ -402,7 +409,7 @@
 							<div class="card">
 								<div class="card-header">
 									<div class="card-header-title pull-left d-inline">
-										Occurence Data
+										Occurrence Data
 									</div>
 									<button class="ssdd-export btn btn-default pull-right"
 									        data-datac="data-summary">
