--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -49,7 +49,8 @@
 									</div>
 								</div>
 								<div class="card-body">
-									<div class="overview-taxa-table dashboard-table">
+									<div id="overview-taxa-table dashboard-table"
+									     class="overview-taxa-table">
 									</div>
 								</div>
 							</div>
@@ -97,6 +98,10 @@
 									<div class="card-header-title pull-left d-inline">
 										Occurrences
 									</div>
+									<button class="fsdd-export btn btn-default pull-right"
+								        data-datac="taxa-records-timeline-graph">
+										<i class="fa fa-download"></i>
+									</button>
 								</div>
 								<div class="card-body">
 									<canvas id="taxa-records-timeline-graph"></canvas>
@@ -112,6 +117,10 @@
 									<div class="card-header-title pull-left d-inline">
 										Origin
 									</div>
+									<button class="fsdd-export btn btn-default pull-right"
+								        data-datac="origin-block-data">
+										<i class="fa fa-download"></i>
+									</button>
 								</div>
 								<div id="origin-block-data">
 								</div>
@@ -124,6 +133,10 @@
 									<div class="card-header-title pull-left d-inline">
 										Endemism
 									</div>
+									<button class="fsdd-export btn btn-default pull-right"
+								        data-datac="endemism-block-data">
+										<i class="fa fa-download"></i>
+									</button>
 								</div>
 								<div id="endemism-block-data">
 								</div>
@@ -138,6 +151,10 @@
 									<div class="card-header-title pull-left d-inline">
 										Conservation Status
 									</div>
+									<button class="fsdd-export btn btn-default pull-right"
+								        data-datac="fsdd-conservation-status-card">
+										<i class="fa fa-download"></i>
+									</button>
 								</div>
 								<div id="fsdd-conservation-status-card">
 								</div>
