--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -77,7 +77,8 @@ html, body, .map, .map-wrapper, #map-container {
     right: 0;
     position: absolute;
     height: 100%;
-    width: 265px;
+    max-width: 35vw;
+    min-width: 422px;
     pointer-events: none;
 }
 
@@ -86,8 +87,8 @@ html, body, .map, .map-wrapper, #map-container {
     right: 0;
     position: relative;
     height: 100%;
-    width: 100%;
-    max-width: 400px;
+    max-width: 35vw;
+    min-width: 422px;
     background: rgb(255, 255, 255);
     color: #4e4e4e;
     z-index: 2000;
@@ -117,9 +118,9 @@ html, body, .map, .map-wrapper, #map-container {
     padding-bottom: 10px;
     padding-left: 15px;
     padding-right: 10px;
-    min-height: 60px;
-    background: white;
-    color: #4e4e4e;
+    min-height: 3rem;
+    background: transparent;
+    color: var(--c-grey-d);
     position: absolute;
     top: 0;
     left: 0;
@@ -128,7 +129,7 @@ html, body, .map, .map-wrapper, #map-container {
 }
 
 .right-panel-header .fa-map-marker {
-    color: #AFC9FA;
+    color: var(--c-grey-d);
 }
 
 .right-panel-title {
@@ -2545,3 +2546,78 @@ div:hover::-webkit-scrollbar {
 .html2canvas-container {
     width: 3000px !important; height: 3000px !important;
 }
+
+#biodiversity-data-wrapper .col-3 {
+    padding: 0;
+    margin: 0;
+    max-height: 10vh;
+}
+
+.side-panel-grey-row {
+    background-color: #ebebeb;
+    padding: 0.25rem;
+    padding-right: 0rem;
+}
+
+.side-panel-white-row {
+    padding: 0.25rem;
+    padding-right: 0;
+    padding-bottom: 0;
+}
+
+.right-panel-chart {
+    position: relative;
+    align-self: center;
+}
+
+.biodiversity-data-images img {
+    max-height: 5vh;
+}
+
+#climate-data-wrapper .row .caption-column {
+    color: #4a4a4a;
+    text-align: left;
+    align-self: center;
+}
+
+#climate-data-wrapper .row .value-column {
+    color: #3D647D;
+    text-align: right;
+    align-self: center;
+}
+
+#climate-data-wrapper .row {
+    border: 1px solid #d3d4d1;
+    background-color: #ebebeb;
+    font-family: "Roboto Condensed";
+    color: #4a4a4a;
+    font-size: 0.75rem;
+    line-height: 2rem;
+ }
+
+#site-details-wrapper .row {
+    border: 1px solid #d3d4d1;
+    background-color: #ebebeb;
+    font-family: "Roboto Condensed";
+    color: #4a4a4a;
+    font-size: 0.75rem;
+    line-height: 2rem;
+
+ }
+
+ #site-details-wrapper .row .value-column {
+    color: #3D647D;
+    text-align: right;
+    align-self: center;
+}
+
+
+ #site-details-wrapper .row .caption-column {
+    color: #4a4a4a;
+    text-align: left;
+    align-self: center;
+}
+
+ .fbis-button-small a { color: inherit; }
+
+ .fbis-button-small a:hover {color: inherit; text-decoration: inherit;}
