Add number of sites in species overview panel

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -71,6 +71,14 @@
                             <%= count %>
                         </td>
                     </tr>
+                    <tr class="species-detail-row">
+                        <td class="species-detail-cell cell-header">
+                            Number of Sites
+                        </td>
+                        <td class="species-detail-cell cell-content">
+                            <%= total_sites %>
+                        </td>
+                    </tr>
                 </table>
             </div>
             <div id="species-detail-summary-origin">
