Rename occurence records to occurrences

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -79,7 +79,7 @@
                             <div class="card">
                                 <div class="card-header">
                                     <div class="card-header-title pull-left d-inline">
-                                        Occurrence Records
+                                        Occurrences
                                     </div>
                                 </div>
                                 <div class="card-body">
