--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -61,10 +61,10 @@
 
 .btn-dashboard {
     border-radius: 0;
-    border: 2px solid black !important;
     position: fixed;
     top: 3px;
-    right: 3px;
+    right: 10px;
+    z-index: 99999;
 }
 
 .btn-element-download {
@@ -290,4 +290,9 @@ table#filter-history-table {
 
 #filter-history-table tr {
     border-bottom: 1px solid #ccc;
+}
+
+.common-name-title {
+    font-weight: normal !important;
+    font-size: 14pt;
 }
