--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2566,6 +2566,7 @@ div:hover::-webkit-scrollbar {
 }
 
 .right-panel-chart {
+    padding: 15px;
     position: relative;
     align-self: center;
 }
@@ -2621,3 +2622,12 @@ div:hover::-webkit-scrollbar {
  .fbis-button-small a { color: inherit; }
 
  .fbis-button-small a:hover {color: inherit; text-decoration: inherit;}
+
+ .fbis-button-disabled {
+     background-color: #BEBEBE !important;
+ }
+
+ .fbis-button-disabled:hover {
+     cursor: default !important;
+     background-color: #BEBEBE !important;
+ }
