Update Single Site Overview panel

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -221,6 +221,10 @@
             <div class="col-4 value-column"><%= fbis_site_code %></div>
         </div>
         <div class="row">
+            <div class="col-8 caption-column">Site Name</div>
+            <div class="col-4 value-column"><%= site_name %></div>
+        </div>
+        <div class="row">
             <div class="col-8 caption-column">Site Coordinates</div>
             <div class="col-4 value-column"><%= site_coordinates %></div>
         </div>
