--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -45,13 +45,7 @@
                 </div>
             </div>
             <div class="row module-filters" style="display: none;"
-                 data-toggle="tooltip" data-placement="top" title="Coming Soon">
-                <div class="col-lg-4 not-ready"><img
-                        src="/static/img/fish-2.svg"></div>
-                <div class="col-lg-4 not-ready"><img
-                        src="/static/img/invertebras-2.svg"></div>
-                <div class="col-lg-4 not-ready"><img
-                        src="/static/img/algae-2.svg"></div>
+                 data-toggle="tooltip" data-placement="top">
             </div>
         {% endif %}
 
