Add photo placeholder in sass single site dashboard

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -204,6 +204,10 @@
                 </div>
                 <div class="col-md-6 mp">
                     <div class="chart-container">
+                        <img width="100%" src="{% static 'img/river.jpg' %}" />
+                    </div>
+                    <div class="vertical-space"></div>
+                    <div class="chart-container">
                         <div class="chart-title">SASS charts
                             <i data-download-title="SASS charts"
                                data-toggle="tooltip" data-placement="left"
