Fix ecological chart in multiple sass dashboard

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -136,8 +136,8 @@
                 <div class="vertical-space"></div>
                 <div class="chart-container ajax-container">
                     <div class="table-title">
-                        Ecological Chart
-                        <i data-download-title="Ecological charts"
+                        Ecological Condition
+                        <i data-download-title="Ecological Condition"
                            data-toggle="tooltip" data-placement="left"
                            title="Download charts"
                            class="fa fa-download pull-right download-icon download-chart"></i>
