--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -325,6 +325,7 @@
                             </div>
                         </div>
                         <div class="card-body" id="fish-ssdd-origins">
+                            <div class="col-12">
                             <div class="row">
                                 <div class="col-6 sub-title site-details-header">
                                     Origin
@@ -336,6 +337,7 @@
                                 <div class="col-12"
                                      id="origins">
                                 </div>
+                            </div>
                             </div>
                         </div>
                         <div class="card-body"
