Bring back csv download

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -326,18 +326,18 @@
                         </div>
                         <div class="card-body" id="fish-ssdd-origins">
                             <div class="col-12">
-                            <div class="row">
-                                <div class="col-6 sub-title site-details-header">
-                                    Origin
+                                <div class="row">
+                                    <div class="col-6 sub-title site-details-header">
+                                        Origin
+                                    </div>
+                                    <div class="col-6 sub-title site-details-header">
+                                        Number of occurrence
+                                        records
+                                    </div>
+                                    <div class="col-12"
+                                         id="origins">
+                                    </div>
                                 </div>
-                                <div class="col-6 sub-title site-details-header">
-                                    Number of occurrence
-                                    records
-                                </div>
-                                <div class="col-12"
-                                     id="origins">
-                                </div>
-                            </div>
                             </div>
                         </div>
                         <div class="card-body"
@@ -372,6 +372,9 @@
                     </div>
                     <div class="card-body">
                         <div class="container" id="occurrence-data">
+                        </div>
+                        <div class="container">
+                            <button class="btn btn-info download-as-csv" style="width: 100%;">Download as CSV</button>
                         </div>
                     </div>
                 </div>
